<resources>
    <string name="app_name">TwitterSnap</string>
    <string name="action_settings">Settings</string>
    <string name="select_image_for_text_recognition">Select image for text recognition</string>
    <string name="permission_rationale_message">Permission is required for applicatioon to function properly</string>
    <string name="delicious_food">Delicious Food</string>
    <string name="not_delicious_food">Not Food</string>
    <string name="error_taking_picture">Error taking picture</string>
    <string name="picture_not_taken">Picture Not Taken!</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="permission_message">I need permission to take pictures :(</string>
    <string name="OK">OK</string>
    <string name="error">Error</string>
    <string name="google_lens_clone">Google lens clone</string>
    <string name="qr_reader">QR reader</string>
    <string name="custom_model">Custom Model ID</string>

</resources>
