<?xml version="1.0" encoding="utf-8"?>


<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activities.SplashActivity"
            android:background="@color/colorPrimaryDark">


        <com.jimmy.ml_firebase.ui.customeviews.WavesView
                style="@style/Widget.WaveView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layerType="hardware"
                />


        <android.support.constraint.Guideline
                android:id="@+id/g1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.30"
        />
        <android.support.constraint.Guideline
                android:id="@+id/g2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7"
        />

        <com.jimmy.ml_firebase.ui.customeviews.MLRoundedImagView
                android:id="@+id/twitterSnap"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/twitterhandle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/g1"
                app:layout_constraintEnd_toEndOf="@id/g1"
                app:circle_radius="0"
                tools:background="@color/colorPrimary"
                app:layout_constraintVertical_bias="0.1"
        />


        <com.jimmy.ml_firebase.ui.customeviews.MLRoundedImagView
                android:id="@+id/deliciousFood"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/delicious_food"
                android:src="@drawable/food"
                app:layout_constraintEnd_toEndOf="@id/g2"
                app:layout_constraintTop_toTopOf="@id/twitterSnap"
                app:layout_constraintStart_toStartOf="@id/g2"
                app:circle_radius="0"
                tools:background="@color/colorPrimary"
        />

        <com.jimmy.ml_firebase.ui.customeviews.MLRoundedImagView
                android:id="@+id/googleLensClone"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/google_lens_clone"
                android:src="@drawable/dims"
                app:layout_constraintEnd_toEndOf="@id/g1"
                app:layout_constraintStart_toStartOf="@id/g1"
                app:layout_constraintTop_toBottomOf="@id/twitterSnap"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"
                app:circle_radius="0"
                tools:background="@color/colorPrimary"
                app:layout_constraintVertical_bias="0.2"
        />

        <com.jimmy.ml_firebase.ui.customeviews.MLRoundedImagView
                android:id="@+id/qrCodeReader"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/qr_reader"
                android:src="@drawable/qrimg"
                app:layout_constraintEnd_toEndOf="@id/g2"
                app:layout_constraintTop_toTopOf="@id/googleLensClone"
                app:layout_constraintStart_toStartOf="@id/g2"
                app:circle_radius="0"
                tools:background="@color/colorPrimary"
                />

        <com.jimmy.ml_firebase.ui.customeviews.MLRoundedImagView
                android:id="@+id/customModelRecognition"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/custom_model"
                android:src="@drawable/detect_obj"
                app:layout_constraintEnd_toEndOf="@id/g1"
                app:layout_constraintStart_toStartOf="@id/g1"
                app:layout_constraintTop_toBottomOf="@id/googleLensClone"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"
                app:circle_radius="0"
                tools:background="@color/colorPrimary"
                app:layout_constraintVertical_bias="0.3"
                />

        <android.support.constraint.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgGroup"
                app:constraint_referenced_ids="twitterSnap,deliciousFood,googleLensClone,qrCodeReader,customModelRecognition"
        />


        <android.support.constraint.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblGroup"
                app:constraint_referenced_ids="textView,textView2"/>


        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                app:layout_constraintTop_toBottomOf="@+id/twitterSnap"
                app:layout_constraintStart_toStartOf="@id/g1"
                app:layout_constraintEnd_toEndOf="@id/g1"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delicious_food"
                app:layout_constraintEnd_toEndOf="@id/g2"
                app:layout_constraintStart_toEndOf="@id/g2"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/google_lens_clone"
                app:layout_constraintTop_toBottomOf="@+id/googleLensClone"
                app:layout_constraintStart_toStartOf="@id/g1"
                app:layout_constraintEnd_toEndOf="@id/g1"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_reader"
                app:layout_constraintEnd_toEndOf="@id/g2"
                app:layout_constraintStart_toEndOf="@id/g2"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_model"
                app:layout_constraintEnd_toEndOf="@id/g1"
                app:layout_constraintStart_toEndOf="@id/g1"
                app:layout_constraintTop_toBottomOf="@+id/customModelRecognition"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />




    </android.support.constraint.ConstraintLayout>
</layout>